# combustion-pellet

./: .gitignore  CITATION.cff  CMakeLists.txt  License.md  Makefile  README.md  ReadMe.md  temp.csv
data/: ReadMe.md
data/PDE-solver-config/: delta_T.txt
data/core-shell-particle-Dean/: core-radius.txt  overall-radius.txt
data/core-shell-particle-Mukasyan/: core-radius.txt  overall-radius.txt
data/pellet/: diameter.txt
data/pellet-Mukasyan/: convective-heat-transfer-coefficient-curved-surface.txt  convective-heat-transfer-coefficient-flat-surface.txt  diameter.txt  length.txt
doxygen/: Doxyfile
doxygen/html/: _q___matrix_8hpp.html  (+148 more)
examples/: CMakeLists.txt  G_Matrix_Example.cpp  Lower_Triangular_Matrix_Example.cpp  QR_Solver_Example.cpp  Q_Matrix_Example.cpp  R_Matrix_Example.cpp  Tridiagonal_Matrix_Example.cpp
examples/pde-problems/: CMakeLists.txt  Core-Shell-Diffusion_Example.cpp  Core-Shell-Diffusion_Example.cu  Pellet-Flame-Propagation-Diffusion_Example.cpp  Pellet-Flame-Propagation_Example.cpp  Pellet-Flame-Propagation_Example.cu
examples/thermo-physical-properties/: Adiabatic_Combustion_Temperature.cpp  CMakeLists.txt  Condensed-Species_Example.cpp  Condensed_Species_Example.cpp  Core-Shell-Combustion-Particle_Example.cpp  Core-Shell-Particle_Example.cpp  Core-Shell-Particle_Example.cu  Enthalpu_Example.cu  Enthalpy_Example.cpp  Enthalpy_Example.cu  Heat_Conductivity_Models_Example.cpp  Ideal-Gas_Example.cpp  Ideal_Gas_Example.cu  Packed-Pellet_Example.cpp  Packed-Pellet_Example.cu  Phase_Example.cpp  Phase_Example.cu  Species_Example.cu  Substance_Example.cpp  Thermal-Conductivity_Example.cpp  Thermal_Conductivity_Example.cu  Thermal_Conductivity_Pellet_Example.cpp
include/: G_Matrix.hpp  GivensRotationMatrix.hpp  Lower_Triangular_Matrix.hpp  QR_Solver.hpp  Q_Matrix.hpp  R_Matrix.hpp  Tridiagonal_Matrix.hpp
scripts/: QR_Factorization.py  Visualizing_Solution.py  Visualizing_Solution_2.py  temperature_line_plots.py  temperature_surface_plot.py
src/: CMakeLists.txt  Core-Shell-Diffusion.cpp  Core-Shell-Diffusion.cu  G_Matrix.cpp  Hetergenous_Thermal_Conductivity_Models.cu  Heterogenous_Thermal_Conductivity_Models.cpp  Lower_Triangular_Matrix.cpp  Pellet-Flame-Propagation.cpp  Pellet-Flame-Propagation.cu  QR_Solver.cpp  Q_Matrix.cpp  R_Matrix.cpp  Thermo-Physical_Properties.cpp  Thermo-Physical_Properties.cu  Tridiagonal_Matrix.cpp  main.cpp
src/lusolver/: CMakeLists.txt  LU-Solver.cpp  LU_Solver.cpp  Tridiagonal-Matrix.cpp  Tridiagonal_Matrix.cpp
src/pde-problems/: CMakeLists.txt  Core-Shell-Diffusion.cpp  Core-Shell-Diffusion.cu  Pellet-Flame-Propagation.cpp
src/pde-problems/core-shell-diffusion/: CMakeLists.txt  Equations.cpp  Utilities.cpp
src/pde-problems/pellet-flame-propagation/: CMakeLists.txt  Equations.cpp  Utilities.cpp
src/qrsolver/: G_Matrix.cpp  QR_Solver.cpp  Q_Matrix.cpp  R_Matrix.cpp
src/thermo-physical-properties/: CMakeLists.txt  Core-Shell-Combustion-Particle.cpp  Core-Shell-Particle.cpp  Packed-Pellet.cpp  Thermal-Conductivity-Pellet.cpp  Thermal_Conductivity_Pellet.cpp
src/utilities/: CMakeLists.txt  File-Generator.cpp  File_Generator.cpp  Keyboard-Interrupt.cpp  Keyboard_Interrupt.cpp  Program-Options.cpp  Read-Data.cpp
(+353 files in other folders)
